[package]
name = "runtime-benchmark"
version = "0.1.0"
edition = "2021"

[features]
default = []
tokio-work-stealing = ["tokio/rt-multi-thread"]
tokio-active-connection-count = []
tokio-round-robin = []
glommio = ["dep:glommio"]
glommio-single-thread = ["dep:glommio"]
tokio-single-thread = []
sleep-service = []
random-sleep-service = []

[dependencies]
hyper = { version = "*", features = ["client", "server", "http1", "http2"] }
futures = { version = "0.3", features = ["executor"] }
futures-lite = "*"
moro = { git = "https://github.com/emschwartz/moro.git", branch = "stable" }
pin-project-lite = "*"
pretty_env_logger = "*"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "time"] }
glommio = { version = "0.9.0", optional = true }
rand = "0.8.5"
